# erzysh

./: .gitignore  CHANGELOG.md  DBdocs.md  README.md  biome.json  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  p.js  package-lock.json  package.json  prompter.config.json  tsconfig.json  vercel.json
.agent/: tasks.md
.agent/rules/: bun-not-npm.md
.github/workflows/: release.yml
data/: users.json
ghost-agent/: CHANGELOG.md  Cargo.toml  README.md  config.json
ghost-agent/src/: main.rs
public/: manifest.json  robots.txt  sw.js
scripts/: bump-version.ts  release.ts  set-webhook.ts  setup.ts  sync-version.ts
src/: middleware.ts
src/__tests__/api/: auth.me.test.ts
src/__tests__/pages/: LoginPage.test.tsx
src/app/: globals.css  layout.tsx  middleware.ts  not-found.tsx  page.tsx  sitemap.ts
src/app/dashboard/: page.tsx
src/app/database/: page.tsx
src/app/ghost-setup/: route.ts
src/app/kuliah/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/: PWAInit.tsx
src/components/DashboardPage/: ApiStatusWidget.tsx  DashboardSkeleton.tsx  GitHubWidget.tsx  JadwalWidget.tsx  StatCard.tsx  (+3 more)
src/context/: HeaderContext.tsx
src/hooks/: useQuestionManager.ts
src/lib/: actions.ts  authService.ts  authUtils.ts  constants.ts  discord-api-handler.ts  jadwal-data.ts  queue.ts  telegram.ts  utils.client.ts  utils.ts  validators.ts  version.ts  web-push.ts
src/types/: api-db-request.ts  api-db-response.ts  discord.ts  index.ts  jadwal-types.ts  jadwal-uas.ts  jadwal.ts  kalender-akademik.ts  payload.ts  tugas.ts
(+157 files in other folders)
