[package]
name = "erzysh_ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

[profile.release]
opt-level = "z"  # Size optimization
lto = true
strip = true
panic = "abort"