[package]
name = "erzysh_ghost"
version = "2.4.9"
edition = "2021"

[dependencies]
# Core async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] } # <-- Ditambahkan

# HTTP Client
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System Info (Pakai v0.29 aja yang stabil dan API-nya lebih umum dipakai di tutorial)
sysinfo = "0.29" 

# Screenshot & Image processing
screenshots = "0.8"
image = "0.24" # <-- Ditambahkan untuk format PNG

# Utils
base64 = "0.21"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
whoami = "1.4"
directories = "5.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"